--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
+    <meta name="google-site-verification" content="DJeNlOjnG5FDRqHNjCVOCjy3_8JrVQqEDVz6VLdjW9A" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NetOyun Sunucu | Resmi Web Sitesi</title>
@@ -136,4 +137,5 @@
         }
     </script>
 </body>
+
 </html>
